k3s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: frontend        # muss zum Pod-Label passen
  ports:
  - port: 80            # Port des Service
    targetPort: 8080      # Port im Container (8080 bei dir)
